src/ui/radarr_ui/collections/snapshots/managarr__ui__radarr_ui__collections__collections_ui_tests__tests__snapshot_tests__collections_tab_CollectionsSortPrompt.snap
---
source: src/ui/radarr_ui/collections/collections_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Collection                           Number of Movies         Root Folder Path         Quality Profile          Search on Add             Monitored               
=> Test Collection                      1                        /nfs/movies              HD - 1080p               Yes                       🏷                       
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                  ╭───────────────────────────────╮                                                                  
                                                                  │Something                      │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  │                               │                                                                  
                                                                  ╰───────────────────────────────╯
